still working on fixixng overflow x issues, and responsiveness issues.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,7 +19,7 @@ html {
    height: 100vh;
    width: 100%;
    //box-shadow: 20px 20px 50px 50px rgb(187, 187, 187) inset;
-    //box-shadow: 20px 20px 50px 50px rgb(185, 185, 185);
+    box-shadow: 20px 20px 50px 50px rgb(185, 185, 185);
    //z-index:-1; 
    background-attachment: fixed;
     #background-video {
@@ -47,13 +47,14 @@ html {
         left: 0;
         margin-right: auto;
         height: 100vh;
+        width: 100%;
         z-index: -11;
     }
 }
 
 #secondDiv {
     //box-shadow: 0px 20px 20px rgb(187, 187, 187) inset;
-    //box-shadow: 20px 20px 50px 50px rgb(194, 194, 194);
+    box-shadow: 20px 20px 50px 50px rgb(194, 194, 194);
     height: 100vh;
     width: 100%;
     background-color: black;
@@ -135,7 +136,7 @@ html {
 
 #thirdDiv {
     //box-shadow: 20px 20px 50px 50px rgb(187, 187, 187) inset;
-    //box-shadow: 20px 20px 50px 50px rgb(185, 185, 185);
+    box-shadow: 20px 20px 50px 50px rgb(185, 185, 185);
     height: 100vh;
     width: 100%;
     //background-attachment: fixed;
@@ -200,7 +201,7 @@ html {
 
 
 #fourthDiv{
-    //box-shadow: 20px 20px 50px 50px rgb(185, 185, 185);
+    box-shadow: 20px 20px 50px 50px rgb(185, 185, 185);
     height: 100vh;
     width: 100%;
     background-color: black;
